--- a/index.html
+++ b/index.html
@@ -4,39 +4,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Conversor</title>
 
-
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    Calculadora
+    <div class="wrapper">
+        <h1 class="title">Conversor</h1>
 
-    <br>
+        <div class="conversor-wrapper">
 
-    <div>
-        <label for="x">Entrada</label>
-        <input type="number" id="x">
-        <select name="" id="xMeasure">
-            <option value="kilo">Kilos</option>
-            <option value="libra">Libra</option>
-            <option value="metro">Metros</option>
-            <option value="pulgada">Pulgadas</option>
-        </select>
-    </div>
-        <label for="y">Salida</label>
-        <input type="number" id="y" readonly>
-        <select name="" id="yMeasure">
-            <option value="kilo">Kilos</option>
-            <option value="libra">Libra</option>
-            <option value="metro">Metros</option>
-            <option value="pulgada">Pulgadas</option>
-        </select>
-    <div>
-    <div>
-        <button onclick="calcular()">Calcular</button>
-    </div>
+            <div class="measure">
+                <!-- <label for="x">Entrada</label> -->
+                <input type="number" id="x" class="input">
+                <select id="xMeasure" class="select">
+                    <option value="kilo">Kilos</option>
+                    <option value="libra">Libras</option>
+                    <option value="metro">Metros</option>
+                    <option value="pulgada">Pulgadas</option>
+                </select>
+            </div>
+            <div class="measure">
+                <!-- <label for="y">Salida</label> -->
+                <input type="number" id="y" readonly class="input">
+                <select id="yMeasure" class="select">
+                    <option value="kilo">Kilos</option>
+                    <option value="libra">Libras</option>
+                    <option value="metro">Metros</option>
+                    <option value="pulgada">Pulgadas</option>
+                </select>
+            </div>
 
+            <!-- <div>
+                <button onclick="calcular()">Calcular</button>
+            </div> -->
+        </div>
     </div>
 
     <script src="calculadora.js"></script>
