--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div class="measure">
                 <!-- <label for="x">Entrada</label> -->
-                <input type="number" id="x" class="input">
+                <input type="number" id="x" class="input" placeholder="" autocomplete="off">
                 <select id="xMeasure" class="select">
                     <option value="kilo">Kilos</option>
                     <option value="libra">Libras</option>
@@ -32,7 +32,7 @@
             </div>
             <div class="measure">
                 <!-- <label for="y">Salida</label> -->
-                <input type="number" id="y" readonly class="input">
+                <input type="number" id="y" readonly class="input" placeholder="" autocomplete="off">
                 <select id="yMeasure" class="select">
                     <option value="kilo">Kilos</option>
                     <option value="libra">Libras</option>
@@ -44,6 +44,12 @@
             <!-- <div>
                 <button onclick="calcular()">Calcular</button>
             </div> -->
+        </div>
+        <br>
+        <div style="display: flex; width: 100%; align-items: center; justify-content: center;">
+            <div class="message" id="clipboardMessage">
+                Copiado al portapapeles.
+            </div>
         </div>
     </div>
 
